certifications/jakarta-enterprise-web-services/1.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Enterprise Web Services.

# Eclipse GlassFish 5.1, Full Profile, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
  This specification does not define an API. CTS TCK verifies required behavior.
- Specification Name, Version and download URL: <br/>
  [Jakarta Enterprise Web Services 1.1](https://jakarta.ee/specifications/enterprise-ws/1.1/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta EE Platform CTS 8.0](http://download.eclipse.org/ee4j/jakartaee-tck/jakartaee8-eftl/promoted/eclipse-jakartaeetck-8.0.0.zip), SHA-256: `847c80c9c80bea4682006f186292b68acdd0ce9b239d998856c3a379c3a7be50`
- Public URL of TCK Results Summary: <br/>
  There is no stand-alone TCK for this specification. See Full Platform CTS for results.
  [TCK results summary](https://eclipse-ee4j.github.io/glassfish/certifications/jakarta-full-profile/8.0/TCK-Results)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  None


Test results:

[TCK results summary](https://eclipse-ee4j.github.io/glassfish/certifications/jakarta-full-profile/8.0/TCK-Results)
