certifications/jakarta-enterprise-web-services/2.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Enterprise Web Services.

# Eclipse GlassFish 6.0.0-RC1, Full Profile, Certification Summary

- Product Name, Version and download URL (if applicable):<br/>
  [Eclipse GlassFish 6.0.0-RC1](https://download.eclipse.org/ee4j/glassfish/glassfish-6.0.0-RC1.zip)
  This specification does not define an API. CTS TCK verifies required behavior.
- Specification Name, Version and download URL: <br/>
  [Jakarta Enterprise Web Services 2.0](https://jakarta.ee/specifications/enterprise-ws/2.0/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta EE Platform TCK 9.0](https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/history/jakarta-jakartaeetck-9.0.0-2020-10-18-7a8978f6f87a8347993ffbd6c28fa16587c4a10983d7ebd78d9709555662411c.zip), SHA-256: `7a8978f6f87a8347993ffbd6c28fa16587c4a10983d7ebd78d9709555662411c`
- Public URL of TCK Results Summary: <br/>
  There is no stand-alone TCK for this specification. See Platform CTS for results.
  [TCK results summary](https://eclipse-ee4j.github.io/glassfish/certifications/jakarta-enterprise-web-services/2.0/TCK-Results)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7, Apache Derby
- By checking this box I acknowledge that the Organization I represent accepts the terms of the [EFTL](https://www.eclipse.org/legal/tck.php).
- By checking this box I attest that all TCK requirements have been met, including any compatibility rules.

Test results:
```
Test Suite Name: ejb30/webservice
********************************************************************************
Completed running 3 tests.
Number of Tests Passed      = 3
Number of Tests Failed      = 0
Number of Tests with Errors = 0
********************************************************************************

Test Suite Name: webservices12
********************************************************************************
Completed running 242 tests.
Number of Tests Passed      = 242
Number of Tests Failed      = 0
Number of Tests with Errors = 0
********************************************************************************

Test Suite Name: webservices13
********************************************************************************
Completed running 53 tests.
Number of Tests Passed      = 53
Number of Tests Failed      = 0
Number of Tests with Errors = 0
********************************************************************************
```